--- a/collab_env/data/boids/1. Simulate_Boid.ipynb
+++ b/collab_env/data/boids/1. Simulate_Boid.ipynb
@@ -57,32 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "8f3c1db9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m      1\u001b[39m species_configs = { \u001b[38;5;66;03m# different spieces should have a different set of values for all the parameters\u001b[39;00m\n\u001b[32m      2\u001b[39m                     \u001b[38;5;66;03m# but the parameter name should all be the same for one updating algorithms.\u001b[39;00m\n\u001b[32m      3\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m     10\u001b[39m           \u001b[33m\"\u001b[39m\u001b[33mcounts\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m20\u001b[39m}\n\u001b[32m     11\u001b[39m }\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m dataset = \u001b[43mAnimalTrajectoryDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43minit_multi_species_boids\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mupdate_boids\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     14\u001b[39m \u001b[43m                              \u001b[49m\u001b[43mspecies_configs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     15\u001b[39m \u001b[43m                              \u001b[49m\u001b[43mwidth\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m640\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheight\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m480\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     16\u001b[39m \u001b[43m                              \u001b[49m\u001b[43msteps\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_samples\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m50\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     17\u001b[39m \u001b[43m                              \u001b[49m\u001b[43mseed\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m2025\u001b[39;49m\n\u001b[32m     18\u001b[39m \u001b[43m                              \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     20\u001b[39m torch.save(dataset, \u001b[33m'\u001b[39m\u001b[33msimulated_data/boid_single_species_basic.pt\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     21\u001b[39m torch.save(species_configs, \u001b[33m'\u001b[39m\u001b[33msimulated_data/boid_single_species_basic_config.pt\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/workspace/collab-gnn/animal_simulation.py:43\u001b[39m, in \u001b[36mAnimalTrajectoryDataset.__init__\u001b[39m\u001b[34m(self, init_fn, update_fn, species_configs, width, height, steps, num_samples, velocity_scale, seed)\u001b[39m\n\u001b[32m     40\u001b[39m     vel = np.array([[b[\u001b[33m'\u001b[39m\u001b[33mdx\u001b[39m\u001b[33m'\u001b[39m], b[\u001b[33m'\u001b[39m\u001b[33mdy\u001b[39m\u001b[33m'\u001b[39m]] \u001b[38;5;28;01mfor\u001b[39;00m b \u001b[38;5;129;01min\u001b[39;00m boids], dtype=np.float32)\n\u001b[32m     42\u001b[39m     traj.append((pos, vel))\n\u001b[32m---> \u001b[39m\u001b[32m43\u001b[39m     \u001b[43mupdate_fn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mboids\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwidth\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mspecies_configs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     45\u001b[39m positions = np.stack([p \u001b[38;5;28;01mfor\u001b[39;00m (p, _) \u001b[38;5;129;01min\u001b[39;00m traj]) / [width, height]\n\u001b[32m     46\u001b[39m species = [\u001b[38;5;28mself\u001b[39m.species_to_idx[b[\u001b[33m'\u001b[39m\u001b[33mspecies\u001b[39m\u001b[33m'\u001b[39m]] \u001b[38;5;28;01mfor\u001b[39;00m b \u001b[38;5;129;01min\u001b[39;00m boids]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/workspace/collab-gnn/boid.py:12\u001b[39m, in \u001b[36mupdate_boids\u001b[39m\u001b[34m(boids, width, height, species_configs)\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m b \u001b[38;5;129;01min\u001b[39;00m boids:\n\u001b[32m     11\u001b[39m     cfg = species_configs[b[\u001b[33m'\u001b[39m\u001b[33mspecies\u001b[39m\u001b[33m'\u001b[39m]]\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m     \u001b[43mfly_towards_center\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43mboids\u001b[49m\u001b[43m,\u001b[49m\u001b[43mcfg\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# Rule1\u001b[39;00m\n\u001b[32m     13\u001b[39m     avoid_others(b,boids,cfg) \u001b[38;5;66;03m# Rule2\u001b[39;00m\n\u001b[32m     14\u001b[39m     match_velocity(b,boids,cfg) \u001b[38;5;66;03m# Rule3\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/workspace/collab-gnn/boid.py:55\u001b[39m, in \u001b[36mfly_towards_center\u001b[39m\u001b[34m(boid, boids, cfg)\u001b[39m\n\u001b[32m     53\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m o \u001b[38;5;129;01min\u001b[39;00m boids:\n\u001b[32m     54\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m o \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m boid \u001b[38;5;129;01mand\u001b[39;00m same_species(boid,o):\n\u001b[32m---> \u001b[39m\u001b[32m55\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m distance(boid, o) < cfg[\u001b[33m'\u001b[39m\u001b[33mvisual_range\u001b[39m\u001b[33m'\u001b[39m]:\n\u001b[32m     56\u001b[39m             cx += o[\u001b[33m'\u001b[39m\u001b[33mx\u001b[39m\u001b[33m'\u001b[39m]; cy += o[\u001b[33m'\u001b[39m\u001b[33my\u001b[39m\u001b[33m'\u001b[39m]; cnt+=\u001b[32m1\u001b[39m\n\u001b[32m     57\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m cnt:\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "species_configs = { # different spieces should have a different set of values for all the parameters\n",
     "                    # but the parameter name should all be the same for one updating algorithms.\n",
     "                    \n",
     "    \"A\": {\"visual_range\":50, \"centering_factor\":0.005,\n",
     "          \"min_distance\":15, \"avoid_factor\":0.05,\n",
-    "          \"matching_factor\":0.5,\n",
+    "          \"matching_factor\":1, #0.1, 0.5\n",
     "          \"margin\":5, #0.05, 25\n",
     "          \"turn_factor\":10,\n",
     "          \"speed_limit\":20,\n",
@@ -96,8 +81,10 @@
     "                              seed = 2025\n",
     "                              )\n",
     "\n",
-    "torch.save(dataset, 'simulated_data/boid_single_species_basic.pt')\n",
-    "torch.save(species_configs, 'simulated_data/boid_single_species_basic_config.pt')"
+    "file_name = 'boid_single_species_basic_strong_alignment.pt'\n",
+    "config_name = 'boid_single_species_basic_strong_alignment_config.pt'\n",
+    "torch.save(dataset, '/workspace/collab-environment/collab_env/data/boids/' + file_name)\n",
+    "torch.save(species_configs, '/workspace/collab-environment/collab_env/data/boids/' + config_name)"
    ]
   },
   {
